--- a/image/package.json
+++ b/image/package.json
@@ -3,3 +3,15 @@
     "version": "0.2.1",
     "description": "Visual art with machine learning, in the browser.",
     "main": "es5/index.js",
+    "types": "es5/index.d.ts",
+    "jsdelivr": "dist/magentaimage.js",
+    "unpkg": "dist/magentaimage.js",
+    "dependencies": {
+        "@tensorflow/tfjs": "^0.14.1"
+    },
+    "devDependencies": {
+        "browserify": "^14.4.0",
+        "clang-format": "^1.2.3",
+        "http-server": "^0.12.1",
+        "ts-node": "^5.0.1",
+        "tsify": "^3
