--- a/image/tsconfig.json
+++ b/image/tsconfig.json
@@ -8,4 +8,16 @@
     "target": "es5",
     "allowJs": false,
     "sourceMap": true,
-   
+    "lib": ["es2015", "dom"],
+    "outDir": "./es5",
+    "noUnusedLocals": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedParameters": false,
+    "pretty": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": false,
+    "experimentalDecorators": true
+  },
+  "include"
