--- a/music/package.json
+++ b/music/package.json
@@ -28,4 +28,15 @@
     "@types/tape": "^4.2.32",
     "@types/webmidi": "^2.0.2",
     "audio-recorder-polyfill": "^0.1.2",
-    
+    "browserify": "^14.4.0",
+    "clang-format": "^1.2.3",
+    "clone": "^1.0.4",
+    "d3": "^5.8.0",
+    "file-saver": "^1.3.8",
+    "file-saver-typescript": "^1.0.1",
+    "http-server": "^0.11.1",
+    "in-publish": "^2.0.0",
+    "minimist": "^1.2.0",
+    "node-fetch": "^2.6.0",
+    "tape": "^4.9.0",
+    "terser-webpack-plugi
