--- a/music/package.json
+++ b/music/package.json
@@ -52,4 +52,8 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "test-and-build": "yarn 
+    "test-and-build": "yarn lint && yarn test && yarn build && yarn test-node-build",
+    "prepublish": "in-publish && yarn test-and-build || not-in-publish",
+    "build:es5": "webpack --config ./webpack/es5.lib.config.ts",
+    "build:es6": "webpack --config webpack/es6.config.ts && cp src/protobuf/proto.* es6/protobuf",
+    "build:esm": "tsc --build tsconfig.esm.json && 
