--- a/music/tsconfig.es5.json
+++ b/music/tsconfig.es5.json
@@ -11,4 +11,16 @@
     "lib": ["es2015", "dom"],
     "types": ["webmidi", "d3", "node"],
     "outDir": "./es5",
-    "noUnusedLoc
+    "noUnusedLocals": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedParameters": false,
+    "pretty": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": false,
+    "experimentalDecorators": true,
+    "skipLibCheck": true
+  },
+  "include": [ "src/" ]
+}
