--- a/music/tsconfig.esm.json
+++ b/music/tsconfig.esm.json
@@ -13,4 +13,14 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     "noUnusedParameters": false,
-    "pretty": 
+    "pretty": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": false,
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "node"
+  },
+  "include": [ "src/" ]
+}
