--- a/sketch/tsconfig.json
+++ b/sketch/tsconfig.json
@@ -11,4 +11,14 @@
     "lib": ["es2015", "dom"],
     "outDir": "./es5",
     "noUnusedLocals": true,
-    "noImplicitRet
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noUnusedParameters": false,
+    "pretty": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowUnreachableCode": false,
+    "experimentalDecorators": true
+  },
+  "include": [ "src/" ]
+}
